Membuat Tampilan List dan List bisa di Klik

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Assesment2</string>
+    <string name="list_kosong">Belom ada data</string>
+    <string name="x_diklik">"%1$s diklik! "</string>
 </resources>
