--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Assesment2</string>
+    <string name="list_kosong">There is no data yet</string>
+    <string name="x_diklik">%1$s clicked!</string>
 </resources>
