Membuat Tombol FAB

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -3,4 +3,6 @@
     <string name="app_name">Assesment2</string>
     <string name="list_kosong">Belom ada data</string>
     <string name="x_diklik">"%1$s diklik! "</string>
+    <string name="tambah_eror">Belum bisa tambah pesanan</string>
+    <string name="tambah_pesanan">Tambah Pesanan</string>
 </resources>
