--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -5,4 +5,7 @@
     <string name="x_diklik">"%1$s diklik! "</string>
     <string name="tambah_eror">Belum bisa tambah pesanan</string>
     <string name="tambah_pesanan">Tambah Pesanan</string>
+    <string name="judul">Judul</string>
+    <string name="isi_catatan">Isi Pesanan</string>
+    <string name="nama_customer">Nama Pelanggan</string>
 </resources>
