--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
-    <string name="app_name">Assesment2</string>
+    <string name="app_name">list Pesanan </string>
     <string name="list_kosong">There is no data yet</string>
     <string name="x_diklik">%1$s clicked!</string>
     <string name="tambah_pesanan">Add Order</string>
     <string name="tambah_eror">Can\'t add orders yet</string>
+    <string name="judul">Title</string>
+    <string name="isi_catatan">Order Contents</string>
+    <string name="nama_customer">Name Customer</string>
 </resources>
