--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="x_diklik">%1$s clicked!</string>
     <string name="tambah_pesanan">Add Order</string>
     <string name="judul">Title</string>
-    <string name="isi_catatan">Order Contents</string>
+    <string name="isi_pesanan">Order Contents</string>
     <string name="nama_customer">Name Customer</string>
+    <string name="pesanan">Order</string>
     <string name="kembali">Back</string>
     <string name="simpan">Save</string>
 </resources>
