Membuat navigasi ke form ubah data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="pesanan">Order</string>
     <string name="kembali">Back</string>
     <string name="simpan">Save</string>
+    <string name="edit_pesanan">Change Order</string>
 </resources>
