--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -10,4 +10,5 @@
     <string name="pesanan">Pesanan</string>
     <string name="kembali">Kembali</string>
     <string name="simpan">Simpan</string>
+    <string name="edit_pesanan">Ubah Pesanan</string>
 </resources>
