Menyimpan data ke database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="kembali">Back</string>
     <string name="simpan">Save</string>
     <string name="edit_pesanan">Change Order</string>
+    <string name="invalid">Order Number, Customer Name, Order and Customer Order Service Type cannot be empty.</string>
 </resources>
