--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -11,4 +11,5 @@
     <string name="kembali">Kembali</string>
     <string name="simpan">Simpan</string>
     <string name="edit_pesanan">Ubah Pesanan</string>
+    <string name="invalid">Nomer Orderan, Nama Customer, Pesanan dan Jenis Layanan Pesanan Customer tidak boleh kosong.</string>
 </resources>
