--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -12,4 +12,6 @@
     <string name="simpan">Simpan</string>
     <string name="edit_pesanan">Ubah Pesanan</string>
     <string name="invalid">Nomer Orderan, Nama Customer, Pesanan dan Jenis Layanan Pesanan Customer tidak boleh kosong.</string>
+    <string name="lainya">Opsi Lainnya</string>
+    <string name="hapus">Hapus Pesanan</string>
 </resources>
