Menangani JSON gagal di-load

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Assesment 3</string>
     <string name="gambar">Gambar %1$s</string>
+    <string name="error">Gagal memuat data..Koneksi error.</string>
+    <string name="try_again">Coba lagi</string>
 </resources>
