--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Assesment 3</string>
     <string name="gambar">Image %1$s</string>
+    <string name="error">Failed to load data..Connection error.</string>
+    <string name="try_again">Try again</string>
 </resources>
