--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -4,4 +4,5 @@
     <string name="gambar">Gambar %1$s</string>
     <string name="error">Gagal memuat data..Koneksi error.</string>
     <string name="try_again">Coba lagi</string>
+    <string name="profil">Profil</string>
 </resources>
