--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="gambar">Image %1$s</string>
     <string name="error">Failed to load data..Connection error.</string>
     <string name="try_again">Try again</string>
+    <string name="profil">Profil</string>
 </resources>
