--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="error">Failed to load data..Connection error.</string>
     <string name="try_again">Try again</string>
     <string name="profil">Profil</string>
+    <string name="tutup">Close</string>
 </resources>
