--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="try_again">Try again</string>
     <string name="profil">Profil</string>
     <string name="tutup">Close</string>
+    <string name="logout">Logout</string>
 </resources>
