Mengambil gambar dari kamera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="profil">Profil</string>
     <string name="tutup">Close</string>
     <string name="logout">Logout</string>
+    <string name="tambah_data">Add data</string>
 </resources>
