Membuat dialog tambah barang

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -8,4 +8,8 @@
     <string name="tutup">Tutup</string>
     <string name="logout">Logout</string>
     <string name="tambah_data">Tambah data</string>
+    <string name="nama">Nama</string>
+    <string name="nama_latin">Nama Latin</string>
+    <string name="batal">Batal</string>
+    <string name="simpan">Simpan</string>
 </resources>
