Menambahkan hapus data dan melakukan sanity check

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -12,4 +12,7 @@
     <string name="nama_latin">Nama Latin</string>
     <string name="batal">Batal</string>
     <string name="simpan">Simpan</string>
+    <string name="pesan_hapus">Hapus data ini?</string>
+    <string name="tombol_hapus">Hapus</string>
+    <string name="tombol_batal">Batal</string>
 </resources>
